# fattureincloud-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  server.py
