[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fattureincloud-mcp"
version = "1.1.0"
description = "MCP Server for Fatture in Cloud API - Italian electronic invoicing with Claude AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mediaform s.c.r.l.", email = "info@media-form.it"}
]
keywords = [
    "mcp",
    "fattureincloud",
    "fatture",
    "invoicing",
    "e-invoice",
    "sdi",
    "claude",
    "anthropic",
    "italy",
    "italian"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "fattureincloud-python-sdk>=2.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aringad/fattureincloud-mcp"
Repository = "https://github.com/aringad/fattureincloud-mcp"
Issues = "https://github.com/aringad/fattureincloud-mcp/issues"
Author = "https://media-form.it"

[project.scripts]
fattureincloud-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
